feat: System architecture update
- Add installation documentation (INSTALL.md, INSTALL_zh.md)
- Update .gitignore to exclude user data and IDE files
- Add Automation feature (Backend API + Frontend Vue)
- Add new plugins: Private Butler, UI Designer, Mail Service
- Update Server Kernel and Skills (Skill Integration, Storage)
- Frontend updates (Locales, Router, Components)

--- a/admin/src/locales/en.json
+++ b/admin/src/locales/en.json
@@ -36,6 +36,7 @@
     "nav_agent": "Agent",
     "nav_user_mgmt": "User Management",
     "nav_agent_mgmt": "Agent Management",
+    "nav_automation": "Automation Tasks",
     "nav_mcp_mgmt": "MCP Management",
     "nav_history": "Conversation History",
     "nav_skills": "Skill Management",
@@ -113,6 +114,7 @@
     "created_at": "Created At",
     "no_content": "No content",
     "file_preview_not_supported": "File preview not supported, please download to view.",
+    "invalid_vue_code": "Invalid Vue code structure, preview unavailable",
     "download_file": "Download File"
   },
   "api_platform": {
@@ -326,14 +328,30 @@
     "form_name_placeholder": "e.g. Python Programming",
     "form_category": "Category",
     "form_level": "Level",
+    "form_parent": "Parent Skill",
+    "form_parent_placeholder": "Select parent skill",
     "form_desc": "Description",
     "form_desc_placeholder": "Describe the skill requirements...",
+    "form_content": "Skill Content (Definition)",
     "confirm_delete_title": "Warning",
     "confirm_delete_msg": "Are you sure you want to delete skill \"{name}\"?",
     "toast_deleted": "Skill deleted",
     "toast_updated": "Skill updated",
     "toast_created": "Skill created",
-    "toast_name_required": "Please enter skill name"
+    "toast_name_required": "Please enter skill name",
+    "toast_delete_failed": "Failed to delete skill",
+    "toast_update_failed": "Failed to update skill",
+    "toast_create_failed": "Failed to create skill",
+    "toast_history_failed": "Failed to fetch evolution history",
+    "toast_fetch_failed": "Failed to fetch skill list",
+    "alert_core_design": "Skill Core Design",
+    "design_p1": "1. Structure: Tree L1 (Specific) -> L2 (Domain) -> L3 (Meta)",
+    "design_p2": "2. Routing: Bottom-up fallback matching (L1 -> L2 -> L3)",
+    "design_p3": "3. Evolution: Top-down derivation (L2 applied successfully -> Auto-generate new L1)",
+    "col_parent": "Parent Skill",
+    "btn_history": "History",
+    "dialog_history_title": "Evolution History",
+    "history_none": "No Evolution History"
   },
   "knowledge": {
     "sidebar_title": "Knowledge Base",
