--- a/admin/src/locales/zh-CN.json
+++ b/admin/src/locales/zh-CN.json
@@ -17,7 +17,7 @@
     "upload_file": "上传文件",
     "upload_click_or_drag": "点击选择文件或拖拽到此处上传",
     "upload_failed": "文件上传失败",
-    "upload_unsupported_type": "仅支持上传 docx / pdf / md / txt 文件",
+    "upload_unsupported_type": "仅支持上传 docx / pdf / md / txt / png / jpg / webp 文件",
     "status": "状态",
     "duration": "耗时",
     "total_tokens": "总 Token",
@@ -36,6 +36,7 @@
     "nav_agent": "智能体",
     "nav_user_mgmt": "用户管理",
     "nav_agent_mgmt": "智能体管理",
+    "nav_automation": "自动化任务",
     "nav_mcp_mgmt": "MCP 管理",
     "nav_history": "会话历史",
     "nav_skills": "技能管理",
@@ -113,6 +114,7 @@
     "created_at": "生成时间",
     "no_content": "暂无内容",
     "file_preview_not_supported": "该文件类型暂不支持在线预览，请下载查看。",
+    "invalid_vue_code": "生成的 Vue 代码结构无效，无法预览",
     "download_file": "下载文件"
   },
   "api_platform": {
@@ -157,6 +159,7 @@
     "system_tab": "系统设置",
     "models_tab": "模型管理",
     "agent_model": "核心 AI 智能体",
+    "full_modal_model": "默认全模态模型",
     "default_agent": "默认智能体模型",
     "embedding_model": "Embedding 模型",
     "reranker_model": "Reranker 模型",
@@ -325,14 +328,30 @@
     "form_name_placeholder": "例如：Python 编程",
     "form_category": "分类",
     "form_level": "等级",
+    "form_parent": "父级技能 (Parent)",
+    "form_parent_placeholder": "选择父级技能",
     "form_desc": "描述",
     "form_desc_placeholder": "描述技能要求...",
+    "form_content": "技能内容 (Content/Definition)",
     "confirm_delete_title": "警告",
     "confirm_delete_msg": "确定要删除技能 \"{name}\" 吗？",
     "toast_deleted": "技能已删除",
     "toast_updated": "技能已更新",
     "toast_created": "技能已创建",
-    "toast_name_required": "请输入技能名称"
+    "toast_name_required": "请输入技能名称",
+    "toast_delete_failed": "删除技能失败",
+    "toast_update_failed": "更新技能失败",
+    "toast_create_failed": "创建技能失败",
+    "toast_history_failed": "无法获取进化历史",
+    "toast_fetch_failed": "获取技能列表失败",
+    "alert_core_design": "技能核心设计 (Skill Core Design)",
+    "design_p1": "1. 数据结构: 树状结构 L1 (具体) -> L2 (领域) -> L3 (元)",
+    "design_p2": "2. 路由机制: 自底向上回退匹配 (L1 -> L2 -> L3)",
+    "design_p3": "3. 进化机制: 自顶向下派生 (L2 成功应用 -> 自动生成新的 L1)",
+    "col_parent": "父级技能",
+    "btn_history": "进化历史",
+    "dialog_history_title": "进化历史",
+    "history_none": "暂无进化记录 (No Evolution History)"
   },
   "knowledge": {
     "sidebar_title": "知识库",
