--- a/admin/src/locales/zh-TW.json
+++ b/admin/src/locales/zh-TW.json
@@ -17,7 +17,7 @@
     "upload_file": "上傳檔案",
     "upload_click_or_drag": "點擊選擇檔案或拖曳到此處上傳",
     "upload_failed": "檔案上傳失敗",
-    "upload_unsupported_type": "僅支援上傳 docx / pdf / md / txt 檔案",
+    "upload_unsupported_type": "僅支援上傳 docx / pdf / md / txt / png / jpg / webp 檔案",
     "status": "狀態",
     "duration": "耗時",
     "total_tokens": "總 Token",
@@ -36,6 +36,7 @@
     "nav_agent": "智能體",
     "nav_user_mgmt": "用戶管理",
     "nav_agent_mgmt": "智能體管理",
+    "nav_automation": "自動化任務",
     "nav_mcp_mgmt": "MCP 管理",
     "nav_history": "會話歷史",
     "nav_skills": "技能管理",
@@ -113,7 +114,8 @@
     "created_at": "生成時間",
     "no_content": "暫無內容",
     "file_preview_not_supported": "該檔案類型暫不支援線上預覽，請下載查看。",
-    "download_file": "下載檔案"
+    "download_file": "下載檔案",
+    "invalid_vue_code": "產生的 Vue 程式碼結構無效，無法預覽"
   },
   "api_platform": {
     "title": "API 平台",
@@ -325,14 +327,30 @@
     "form_name_placeholder": "例如：Python 程式設計",
     "form_category": "分類",
     "form_level": "等級",
+    "form_parent": "父級技能 (Parent)",
+    "form_parent_placeholder": "選擇父級技能",
     "form_desc": "描述",
     "form_desc_placeholder": "描述技能要求...",
+    "form_content": "技能內容 (Content/Definition)",
     "confirm_delete_title": "警告",
     "confirm_delete_msg": "確定要刪除技能 \"{name}\" 嗎？",
     "toast_deleted": "技能已刪除",
     "toast_updated": "技能已更新",
     "toast_created": "技能已建立",
-    "toast_name_required": "請輸入技能名稱"
+    "toast_name_required": "請輸入技能名稱",
+    "toast_delete_failed": "刪除技能失敗",
+    "toast_update_failed": "更新技能失敗",
+    "toast_create_failed": "建立技能失敗",
+    "toast_history_failed": "無法獲取進化歷史",
+    "toast_fetch_failed": "獲取技能列表失敗",
+    "alert_core_design": "技能核心設計 (Skill Core Design)",
+    "design_p1": "1. 數據結構: 樹狀結構 L1 (具體) -> L2 (領域) -> L3 (元)",
+    "design_p2": "2. 路由機制: 自底向上回退匹配 (L1 -> L2 -> L3)",
+    "design_p3": "3. 進化機制: 自頂向下派生 (L2 成功應用 -> 自動生成新的 L1)",
+    "col_parent": "父級技能",
+    "btn_history": "進化歷史",
+    "dialog_history_title": "進化歷史",
+    "history_none": "暫無進化記錄 (No Evolution History)"
   },
   "knowledge": {
     "sidebar_title": "知識庫",
